--- a/game/templates/games/ranking-list.html
+++ b/game/templates/games/ranking-list.html
@@ -40,7 +40,7 @@
                         <h3>{{ game.story.name }}</h3>
                     </div>
                     <div class="col-lg-4">
-                        <h3>Puntuación: {{ game.points }}</h3>
+                        <h3>Puntuación: {{ game.points|floatformat:-2 }}</h3>
                     </div>
             </div>
         {% endif %}
